=== Testimonials Widget ===

== Changelog ==

= trunk =
* Always include settings class
* Move lesser used widget options to expandable Additional Widget Options section
* Revise `absint` and `intval` validation to default on blank entry
* Update TODO
* Update text domain for localization and POT
* Use `links_add_target` for widget title link

= 2.11.1 =
* BUGFIX [Fatal error: Testimonials_Widget_Settings](http://wordpress.org/support/topic/fatal-error-testimonials_widget_settings)

= 2.11.0 =
* Add Option "Hide Image in Single View?" `hide_image_single`
* Add `.author` and `.email` to CSS
* Add `.single` to single view testimonials
* Add location to meta_key ordering options
* BUGFIX [Convert q tags to blockquote](http://wordpress.org/support/topic/open-link-in-new-tab-html-validation) [Why?](http://www.w3schools.com/tags/tag_blockquote.asp)
* BUGFIX [Fix cite tag usage - it's title, not source](http://www.w3.org/html/wg/drafts/html/master/text-level-semantics.html#the-cite-element) using [T](http://html5doctor.com/blockquote-q-cite/) [BD](http://oli.jp/2011/blockquote/)
* Beta testers needed section added
* Disable self-generated quotation marks
* Enable backwards compatibility for default options
* Ignore init() during AJAX and autosave operations
* Optimize DB after uninstall
* Rename CSS attributes to credit
* Revise README verbiage in general
* Simplify CSS naming
* Update Allow Comments verbiage
* Update TODOs
* Update features listing
* Update options listing
* Update premium features
* Update readme formatting

= 2.10.3 =
* Add "Menu Order" to Order By options
* Add Height option to automatically set min and max height
* BUGFIX [Only one testimonial displaying](http://wordpress.org/support/topic/only-one-testimonial-displaying)
* BUGFIX [Post Types Order](http://wordpress.org/support/topic/random-order-doesnt-work) - sorting conflict
* Delete data on uninstall 